# pico-test

./: .gitignore  CLAUDE.md  Cargo.toml  default-settings.json
.cargo/: config.toml
assets/: index.html
src/: main.rs  settings.rs
