[package]
name = "pico-blink"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pico-blink"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
static_cell = "2.1"
portable-atomic = { version = "1", features = ["critical-section"] }

embassy-executor = { version = "0.6", features = [
    "task-arena-size-65536",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-time = { version = "0.3", features = ["tick-hz-1_000_000"] }
embassy-rp = { version = "0.2", features = [
    "time-driver",
    "critical-section-impl",
    "unstable-pac",
    "rt",
    "boot2-w25q080",
] }
embassy-futures = "0.1"
embassy-sync = "0.6"

cyw43 = "0.2"
cyw43-pio = "0.2"

embassy-usb-logger = "0.2"
log = "0.4"

embassy-net = { version = "0.4", features = [
    "tcp",
    "udp",
    "proto-ipv4",
    "medium-ethernet",
] }
embedded-io-async = "0.6"
heapless = "0.8"
rand_core = "0.6"

serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "z"
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
